--- a/src/styles.scss
+++ b/src/styles.scss
@@ -131,3 +131,24 @@ $handleBgColor: var(--bs-primary-rgb);
 .default-locale-name {
   font-size: 0.7em;
 }
+
+/** Blockquote **/
+
+blockquote {
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: '\201C' '\201D' '\2018' '\2019';
+}
+
+blockquote:before {
+  color: #ccc;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+
+blockquote p {
+  display: inline;
+}
