--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -16,26 +16,27 @@
     </div>
     @if (!isEditing){
     <p class="text-justify comment-text mb-0">
-      {{ comment.content }}
+      <markdown class="mt-3" [data]="comment.content" emoji />
     </p>
     }
     @if (isEditing){
-    <form class="comment-form" [formGroup]="form" (ngSubmit)="editComment()">
-      <div class="input-group mb-3">
-        <input type="text" formControlName="comment" class="form-control" [placeholder]="t('edit_placeholder')">
+    <div class="d-flex flex-column w-100 justify-content-center align-self-center">
+      <div class="w-100 justify-content-center align-self-center text-start">
+        <app-markdown-textarea [formControl]="commentControl" [placeholder]="t('comment_placeholder')"
+          [label]="t('comment')"></app-markdown-textarea>
+      </div>
+      <div class="mt-2">
         <button type="button" class="btn btn-outline-primary" (click)="editComment()" [title]="t('edit_title')">
-          <i class="bi bi-pencil-fill"></i>
+          <i class="bi bi-pencil-fill me-2"></i>{{ t('edit_title') }}
         </button>
       </div>
-    </form>
+    </div>
     }
-    @if (comment.createdByCurrentUser || (isAdmin$ | async)!){
+    @if (!isEditing && (comment.createdByCurrentUser || (isAdmin$ | async)!)){
     <div class="d-flex flex-row user-feed">
-      @if (!isEditing){
       <a class="text-decoration-none" href="javascript:void(0)" (click)="switchEditComment()" [title]="t('edit_title')">
         <i class="bi bi-pencil-fill me-1"></i>{{ t('edit') }}
       </a>
-      }
       <a class="text-decoration-none ms-2" href="javascript:void(0)" (click)="deleteComment()"
         [title]="t('delete_title')">
         <i class="bi bi-trash-fill me-1"></i>{{ t('delete') }}
