Fix duplicated formControl Input conflict

--- a/src/app/modules/deck-builder/builder.component.html
+++ b/src/app/modules/deck-builder/builder.component.html
@@ -12,7 +12,7 @@
             </div>
           </div>
           <div class="justify-content-center align-self-center text-start p-2">
-            <app-markdown-textarea [formControl]="descriptionControl" [placeholder]="t('description_placeholder')"
+            <app-markdown-textarea [control]="descriptionControl" [placeholder]="t('description_placeholder')"
               [label]="t('description')"></app-markdown-textarea>
           </div>
           <div class="deck-actions justify-content-center align-self-center px-2 pt-2">
