--- a/src/app/shared/components/markdown-textarea/markdown-textarea.component.html
+++ b/src/app/shared/components/markdown-textarea/markdown-textarea.component.html
@@ -57,7 +57,7 @@
   } @else{
   <div class="form-floating">
     <textarea #ref class="form-control w-vw-100" id="description" type="text" [placeholder]="placeholder()"
-      style="height: 12rem;" [formControl]="formControl()"></textarea>
+      style="height: 12rem;" [formControl]="control()"></textarea>
     <label for="description">{{ label() }}</label>
   </div>
   }
