--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -22,7 +22,7 @@
     @if (isEditing){
     <div class="d-flex flex-column w-100 justify-content-center align-self-center">
       <div class="w-100 justify-content-center align-self-center text-start">
-        <app-markdown-textarea [formControl]="commentControl" [placeholder]="t('comment_placeholder')"
+        <app-markdown-textarea [control]="commentControl" [placeholder]="t('comment_placeholder')"
           [label]="t('comment')"></app-markdown-textarea>
       </div>
       <div class="mt-2">
