--- a/src/app/modules/comments/comments.component.html
+++ b/src/app/modules/comments/comments.component.html
@@ -4,11 +4,11 @@
       onerror="this.src='/assets/img/default_user.png'">
     <div class="d-flex flex-column w-100 justify-content-center align-self-center">
       <div class="w-100 justify-content-center align-self-center text-start">
-        <app-markdown-textarea [formControl]="commentControl" [placeholder]="t('comment_placeholder')"
+        <app-markdown-textarea [control]="commentControl" [placeholder]="t('comment_placeholder')"
           [label]="t('comment')"></app-markdown-textarea>
       </div>
       <div class="mt-2">
-        <button type="button" class="btn btn-outline-primary" (click)="addComment()" [title]="t('post_comment')">
+        <button type="button" class="btn btn-outline-primary" (click)="addComment()">
           <i class="bi bi-send-fill me-2"></i>{{ t('post_comment') }}
         </button>
       </div>
