--- a/src/app/shared/components/ad-sense/ad-sense.component.html
+++ b/src/app/shared/components/ad-sense/ad-sense.component.html
@@ -1,4 +1,4 @@
-<div class="mt-3 text-center">
+<div class="w-100 mt-3 text-center">
   <ins class="adsbygoogle" style="display:block" [attr.data-ad-client]="adClient" [attr.data-ad-slot]="adSlot"
     [attr.data-ad-format]="adFormat" [attr.data-full-width-responsive]="fullWidthResponsive"></ins>
   <div *adSense></div>
