--- a/src/app/shared/components/markdown-textarea/markdown-textarea.component.html
+++ b/src/app/shared/components/markdown-textarea/markdown-textarea.component.html
@@ -56,8 +56,8 @@
   <markdown [data]="description" emoji />
   } @else{
   <div class="form-floating">
-    <textarea #ref class="form-control w-vw-100" id="description" type="text" [placeholder]="placeholder()"
-      style="height: 12rem;" [formControl]="control()"></textarea>
+    <textarea #ref class="form-control w-vw-100 markdown-textarea" id="description" type="text"
+      [placeholder]="placeholderWithExample" [formControl]="control()"></textarea>
     <label for="description">{{ label() }}</label>
   </div>
   }
