--- a/src/app/modules/deck-shared/library-list/library-list.component.html
+++ b/src/app/modules/deck-shared/library-list/library-list.component.html
@@ -1,22 +1,21 @@
 <div class="row" *transloco="let t; read: 'deck_shared'">
   @for (libraryType of libraryTypes; track trackByIndexFn($index, libraryType)) {
-    <ul
-      class="col-12 col-sm-12 col-md-12 col-lg-6 p-1 list-group">
-      <li class="list-group-item list-group-item-primary">
-        {{ librarySizeByType(libraryType) }}&nbsp;{{ libraryType | libraryTypeTransloco }}
-        @if (libraryType === 'Master' && masterTrifle > 0) {
-          &nbsp;-&nbsp;{{ masterTrifle }} {{ 'vtes.type.trifle' | transloco }}
-        }
-        <span class="float-end"> {{ percentageSize(libraryType) }}% </span>
-      </li>
-      @for (library of libraryCards(libraryType); track trackByFn($index, library)) {
-        <div>
-          <app-library [card]="library" [librarySize]="librarySize" [withControls]="withControls"
-            (cardAdded)="cardAdded.emit($event)" (cardRemoved)="cardRemoved.emit($event)"
-            (click)="openCryptCard(library, libraryList!)" [disablePopover]="(isMobileOrTablet$ | async)!"
-          [disableClickPopover]="true"></app-library>
-        </div>
+  <ul class="col-12 col-sm-12 col-md-12 col-lg-6 p-1 list-group">
+    <li class="list-group-item list-group-item-primary">
+      {{ librarySizeByType(libraryType) }}&nbsp;{{ libraryType | libraryTypeTransloco }}
+      @if (libraryType === 'Master' && masterTrifle > 0) {
+      &nbsp;-&nbsp;{{ masterTrifle }} {{ 'vtes.type.trifle' | transloco }}
       }
-    </ul>
+      <span class="float-end"> {{ percentageSize(libraryType) }}% </span>
+    </li>
+    @for (library of libraryCards(libraryType); track trackByFn($index, library)) {
+    <div>
+      <app-library [card]="library" [librarySize]="librarySize" [withControls]="withControls"
+        (cardAdded)="cardAdded.emit($event)" (cardRemoved)="cardRemoved.emit($event)"
+        (click)="openCryptCard(library, libraryList!)" [disablePopover]="!withControls && (isMobileOrTablet$ | async)!"
+        [disableClickPopover]="!withControls"></app-library>
+    </div>
+    }
+  </ul>
   }
 </div>
