--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -16,7 +16,7 @@
     </div>
     @if (!isEditing){
     <p class="text-justify comment-text mb-0">
-      <markdown class="mt-3" [data]="comment.content" emoji />
+      <markdown class="mt-3" [data]="comment.content" [disableSanitizer]="true" emoji />
     </p>
     }
     @if (isEditing){
